--- a/livestream-im-router-provider/src/main/resources/bootstrap.yml
+++ b/livestream-im-router-provider/src/main/resources/bootstrap.yml
@@ -1,23 +1,23 @@
 spring:
   cloud:
     nacos:
-      username: ${NACOS_USER}
-      password: ${NACOS_PWD}
+#      username: ${NACOS_USER}
+#      password: ${NACOS_PWD}
       discovery:
-        server-addr: qiyu.nacos.com:8848
-        namespace: qiyu-live-test
+        server-addr: ${NACOS_SERVER}:8848
+        namespace: livestream-dev
       config:
         import-check:
           enabled: false
         # 当前服务启动后去nacos中读取配置文件的后缀
         file-extension: yaml
         # 读取配置的nacos地址
-        server-addr: qiyu.nacos.com:8848
+        server-addr: ${NACOS_SERVER}:8848
         # 读取配置的nacos的名空间
-        namespace: qiyu-live-test
+        namespace: livestream-dev
   config:
     import:
-      - optional:nacos:qiyu-live-im-router-provider.yaml
+      - optional:nacos:livestream-im-router-provider.yaml
 
 dubbo:
   consumer:
