chore: 修改 im provider 的配置文件

--- a/nacos-config/livestream-im-provider.yaml
+++ b/nacos-config/livestream-im-provider.yaml
@@ -1,13 +1,19 @@
+livestream:
+  server:
+    redis:
+    nacos:
+    rocketmq:
+
 spring:
   main:
     allow-bean-definition-overriding: true
   application:
-    name: qiyu-live-im-provider
+    name: livestream-im-provider
   data:
     redis:
-      port: 8801
-      host: cloud.db
-      password: qiyu
+      port: 6379
+      host: ${livestream.server.redis}
+      password: redis123
       lettuce:
         pool:
           min-idle: 10
@@ -19,7 +25,7 @@ dubbo:
     name: ${spring.application.name}
   registry:
     #docker启动的时候，注入host的配置
-    address: nacos://qiyu.nacos.com:8848?namespace=qiyu-live-test&&username=qiyu&&password=qiyu
+    address: nacos://${livestream.server.nacos}:8848?namespace=livestream-dev #&&username=nacos&&password=nacos
   protocol:
     name: dubbo
     port: 9010
