--- a/livestream-im-router-provider/pom.xml
+++ b/livestream-im-router-provider/pom.xml
@@ -18,6 +18,10 @@
 
     <dependencies>
         <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-actuator</artifactId>
+        </dependency>
+        <dependency>
             <groupId>org.idea</groupId>
             <artifactId>livestream-common-interface</artifactId>
             <version>${qiyu-live-common-interface.version}</version>
