--- a/livestream-im-core-server/src/test/resources/bootstrap.yml
+++ b/livestream-im-core-server/src/test/resources/bootstrap.yml
@@ -1,22 +1,22 @@
 spring:
   application:
-    name: qiyu-live-im-core-server-test
+    name: livestream-im-core-server-test
   cloud:
     nacos:
-      username: ${NACOS_USER}
-      password: ${NACOS_PWD}
+#      username: ${NACOS_USER}
+#      password: ${NACOS_PWD}
       discovery:
-        server-addr: qiyu.nacos.com:8848
-        namespace: qiyu-live-test
+        server-addr: ${NACOS_SERVER}:8848
+        namespace: livestream-dev
       config:
         import-check:
           enabled: false
         # 当前服务启动后去nacos中读取配置文件的后缀
         file-extension: yaml
         # 读取配置的nacos地址
-        server-addr: qiyu.nacos.com:8848
+        server-addr: ${NACOS_SERVER}:8848
         # 读取配置的nacos的名空间
-        namespace: qiyu-live-test
+        namespace: livestream-dev
   config:
     import:
-      - optional:nacos:qiyu-live-im-core-server.yaml
+      - optional:nacos:${NACOS_CONFIG_NAME}.yaml
