--- a/nacos-config/livestream-msg-provider.yaml
+++ b/nacos-config/livestream-msg-provider.yaml
@@ -1,42 +1,57 @@
+livestream:
+  server:
+    redis:
+    nacos:
+    rocketmq:
+    mysql:
+  sms:
+    ccp:
+      smsServerIp: app.cloopen.com
+      port: 8883
+      accountSId: [ 容联云上的accountSID ]
+      accountToken: [ 容联云上的Token ]
+      appId: [ 容联云上的appId ]
+      templateId: 1
+      testPhone: 13510647925
+  rmq:
+    consumer:
+      nameSrv: ${livestream.server.rocketmq}:9876
+      groupName: ${spring.application.name}
+    producer:
+      nameSrv: ${livestream.server.rocketmq}:9876
+      groupName: ${spring.application.name}
+      applicationName: ${spring.application.name}
+      sendMsgTimeout: 3000
+      retryTimes: 2
+
 spring:
   application:
-    name: qiyu-live-msg-provider
+    name: livestream-msg-provider
   datasource:
     hikari:
       minimum-idle: 10
       maximum-pool-size: 200
     driver-class-name: com.mysql.cj.jdbc.Driver
     #访问主库
-    url: jdbc:mysql://cloud.msg.db:8808/qiyu_live_msg?useUnicode=true&characterEncoding=utf8
-    username: qiyu
-    password: qiyu
+    url: jdbc:mysql://${livestream.server.mysql}:3306/livestream_msg?useUnicode=true&characterEncoding=utf8
+    username: root
+    password: root123_A
   data:
     redis:
-      port: 8801
-      host: cloud.db
-      password: qiyu
+      port: 6379
+      host: ${livestream.server.redis}
+      password: redis123
       lettuce:
         pool:
           min-idle: 10
           max-active: 100
           max-idle: 10
 
-qiyu:
-  sms:
-    ccp:
-      smsServerIp: app.cloopen.com
-      port: 8883
-      accountSId: [容联云上的accountSID]
-      accountToken: [容联云上的Token]
-      appId: [容联云上的appId]
-      templateId: 1
-      testPhone: 13510647925
-
 dubbo:
   application:
     name: ${spring.application.name}
   registry:
-    address: nacos://qiyu.nacos.com:8848?namespace=qiyu-live-test&&username=qiyu&&password=qiyu
+    address: nacos://${livestream.server.nacos}:8848?namespace=livestream-dev #&&username=nacos&&password=nacos
   protocol:
     name: dubbo
-    port: 9090
+    port: 9190
