--- a/livestream-living-provider/pom.xml
+++ b/livestream-living-provider/pom.xml
@@ -9,10 +9,10 @@
     <artifactId>livestream-living-provider</artifactId>
 
     <properties>
-        <qiyu-live-redis-starter.version>1.0-SNAPSHOT</qiyu-live-redis-starter.version>
-        <qiyu-live-im-interface.version>1.0-SNAPSHOT</qiyu-live-im-interface.version>
-        <qiyu-live-living-interface.version>1.0-SNAPSHOT</qiyu-live-living-interface.version>
-        <qiyu-live-common-interface.version>1.0-SNAPSHOT</qiyu-live-common-interface.version>
+        <livestream-redis-starter.version>1.0-SNAPSHOT</livestream-redis-starter.version>
+        <livestream-im-interface.version>1.0-SNAPSHOT</livestream-im-interface.version>
+        <livestream-living-interface.version>1.0-SNAPSHOT</livestream-living-interface.version>
+        <livestream-common-interface.version>1.0-SNAPSHOT</livestream-common-interface.version>
         <mybatis-plus.version>3.5.3</mybatis-plus.version>
     </properties>
 
@@ -20,12 +20,12 @@
         <dependency>
             <groupId>org.idea</groupId>
             <artifactId>livestream-common-interface</artifactId>
-            <version>${qiyu-live-common-interface.version}</version>
+            <version>${livestream-common-interface.version}</version>
         </dependency>
         <dependency>
             <groupId>org.idea</groupId>
             <artifactId>livestream-framework-redis-starter</artifactId>
-            <version>${qiyu-live-redis-starter.version}</version>
+            <version>${livestream-redis-starter.version}</version>
         </dependency>
         <dependency>
             <groupId>org.apache.dubbo</groupId>
@@ -48,7 +48,7 @@
         <dependency>
             <groupId>org.idea</groupId>
             <artifactId>livestream-living-interface</artifactId>
-            <version>${qiyu-live-living-interface.version}</version>
+            <version>${livestream-living-interface.version}</version>
         </dependency>
         <dependency>
             <groupId>org.idea</groupId>
@@ -63,7 +63,7 @@
         <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
-            <version>${qiyu-mysql.version}</version>
+            <version>${livestream-mysql.version}</version>
         </dependency>
         <dependency>
             <groupId>org.idea</groupId>
