--- a/livestream-im-provider/pom.xml
+++ b/livestream-im-provider/pom.xml
@@ -11,21 +11,21 @@
     <version>1.0.1</version>
 
     <properties>
-        <qiyu-live-redis-starter.version>1.0-SNAPSHOT</qiyu-live-redis-starter.version>
-        <qiyu-live-im-interface.version>1.0-SNAPSHOT</qiyu-live-im-interface.version>
-        <qiyu-live-common-interface.version>1.0-SNAPSHOT</qiyu-live-common-interface.version>
+        <livestream-redis-starter.version>1.0-SNAPSHOT</livestream-redis-starter.version>
+        <livestream-im-interface.version>1.0-SNAPSHOT</livestream-im-interface.version>
+        <livestream-common-interface.version>1.0-SNAPSHOT</livestream-common-interface.version>
     </properties>
 
     <dependencies>
         <dependency>
             <groupId>org.idea</groupId>
             <artifactId>livestream-common-interface</artifactId>
-            <version>${qiyu-live-common-interface.version}</version>
+            <version>${livestream-common-interface.version}</version>
         </dependency>
         <dependency>
             <groupId>org.idea</groupId>
             <artifactId>livestream-framework-redis-starter</artifactId>
-            <version>${qiyu-live-redis-starter.version}</version>
+            <version>${livestream-redis-starter.version}</version>
         </dependency>
         <dependency>
             <groupId>org.apache.dubbo</groupId>
@@ -48,7 +48,7 @@
         <dependency>
             <groupId>org.idea</groupId>
             <artifactId>livestream-im-interface</artifactId>
-            <version>${qiyu-live-im-interface.version}</version>
+            <version>${livestream-im-interface.version}</version>
         </dependency>
         <dependency>
             <groupId>org.idea</groupId>
