--- a/livestream-user-provider/pom.xml
+++ b/livestream-user-provider/pom.xml
@@ -66,7 +66,7 @@
         <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
-            <version>${qiyu-mysql.version}</version>
+            <version>${livestream-mysql.version}</version>
         </dependency>
 
         <dependency>
