--- a/nacos-config/livestream-living-provider.yaml
+++ b/nacos-config/livestream-living-provider.yaml
@@ -1,43 +1,50 @@
-spring:
-  application:
-    name: qiyu-live-living-provider
-  datasource:
-    hikari:
-      minimum-idle: 10
-      maximum-pool-size: 200
-    driver-class-name: com.mysql.cj.jdbc.Driver
-    #访问主库
-    url: jdbc:mysql://cloud.db:8808/qiyu_live_living?useUnicode=true&characterEncoding=utf8
-    username: qiyu
-    password: qiyu
-  data:
+livestream:
+  server:
     redis:
-      port: 8801
-      host: cloud.db
-      password: qiyu
-      lettuce:
-        pool:
-          min-idle: 10
-          max-active: 100
-          max-idle: 10
-qiyu:
+    nacos:
+    rocketmq:
+    mysql:
   rmq:
     consumer:
-      nameSrv: qiyu.rmq.com:9876
+      nameSrv: ${livestream.server.rocketmq}:9876
       groupName: ${spring.application.name}
     producer:
-      nameSrv: qiyu.rmq.com:9876
+      nameSrv: ${livestream.server.rocketmq}:9876
       groupName: ${spring.application.name}
       applicationName: ${spring.application.name}
       sendMsgTimeout: 3000
       retryTimes: 3
 
 
+spring:
+  application:
+    name: livestream-living-provider
+  datasource:
+    hikari:
+      minimum-idle: 10
+      maximum-pool-size: 200
+    driver-class-name: com.mysql.cj.jdbc.Driver
+    #访问主库
+    url: jdbc:mysql://${livestream.server.mysql}:3306/livestream_living?useUnicode=true&characterEncoding=utf8
+    username: root
+    password: root123_A
+  data:
+    redis:
+      port: 6379
+      host: ${livestream.server.redis}
+      password: redis123
+      lettuce:
+        pool:
+          min-idle: 10
+          max-active: 100
+          max-idle: 10
+
+
 dubbo:
   application:
     name: ${spring.application.name}
   registry:
-    address: nacos://qiyu.nacos.com:8848?namespace=qiyu-live-test&&username=qiyu&&password=qiyu
+    address: nacos://${livestream.server.nacos}:8848?namespace=livestream-dev #&&username=nacos&&password=nacos
   protocol:
     name: dubbo
-    port: 9089
+    port: 9059
