--- a/nacos-config/livestream-bank-api.yaml
+++ b/nacos-config/livestream-bank-api.yaml
@@ -1,12 +1,16 @@
+livestream:
+  server:
+    nacos:
+
 spring:
   application:
-    name: qiyu-live-bank-api
+    name: livestream-bank-api
 dubbo:
   application:
-    name: qiyu-live-bank-api
+    name: livestream-bank-api
     qos-enable: false
   registry:
-    address: nacos://qiyu.nacos.com:8848?namespace=qiyu-live-test&&username=qiyu&&password=qiyu
+    address: nacos://${livestream.server.nacos}:8848?namespace=livestream-dev #&&username=nacos&&password=nacos
 
 server:
   port: 8201
