--- a/nacos-config/livestream-id-generate-provider.yaml
+++ b/nacos-config/livestream-id-generate-provider.yaml
@@ -1,18 +1,25 @@
+livestream:
+  server:
+    redis:
+    nacos:
+    rocketmq:
+    mysql:
+
 spring:
   application:
-    name: qiyu-live-id-generate-provider
+    name: livestream-id-generate-provider
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    #访问主库
-    url: jdbc:mysql://cloud.db:8808/qiyu_live_common?useUnicode=true&characterEncoding=utf8
-    username: qiyu
-    password: qiyu
+    # 访问主库
+    url: jdbc:mysql://${livestream.server.mysql}:3306/livestream_common?useUnicode=true&characterEncoding=utf8
+    username: root
+    password: root123_A
 
 dubbo:
   application:
     name: ${spring.application.name}
   registry:
-    address: nacos://qiyu.nacos.com:8848?namespace=qiyu-live-test&&username=qiyu&&password=qiyu
+    address: nacos://${livestream.server.nacos}:8848?namespace=livestream-dev #&&username=nacos&&password=nacos
   protocol:
     name: dubbo
     port: 9092
