--- a/livestream-user-provider/pom.xml
+++ b/livestream-user-provider/pom.xml
@@ -121,12 +121,6 @@
             <artifactId>activation</artifactId>
             <version>1.1.1</version>
         </dependency>
-        <dependency>
-            <groupId>org.idea</groupId>
-            <artifactId>livestream-id-generate-interface</artifactId>
-            <version>1.0-SNAPSHOT</version>
-            <scope>compile</scope>
-        </dependency>
     </dependencies>
 
     <build>
@@ -151,7 +145,8 @@
                     <imageTags>
                         <imageTag>${project.version}</imageTag>
                     </imageTags>
-                    <imageName>${docker.registry.address}/${docker.registry.namespace}/${project.build.finalName}</imageName>
+                    <imageName>${docker.registry.address}/${docker.registry.namespace}/${project.build.finalName}
+                    </imageName>
                     <!--指定Dockerfile文件的位置-->
                     <dockerDirectory>${project.basedir}/docker</dockerDirectory>
                     <resources>
